--- a/eng/pipelines/templates/steps/publish-release.yaml
+++ b/eng/pipelines/templates/steps/publish-release.yaml
@@ -8,7 +8,7 @@ parameters:
 steps:
   - pwsh: |
       $currentVersion = node -p -e "require('./packages/${{ parameters.PackagePath }}/package.json').version"
-      $releaseNotes = ${{ parameters.ReleaseNotes }}
+      $releaseNotes = "${{ parameters.ReleaseNotes }}"
       if ('${{ parameters.PublishDevVersion }}' -eq 'true') {
         $currentVersion="$currentVersion-$(Build.BuildNumber)"
         $releaseNotes = "Preview version of ${{ parameters.ReleaseNotes }}"
