--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -47,6 +47,7 @@
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
     "@azure-tools/cadl-ranch": "~0.13.4",
+    "@azure-tools/cadl-ranch-api": "~0.4.4",
     "@azure-tools/cadl-ranch-expect": "~0.14.1",
     "@azure-tools/cadl-ranch-specs": "0.34.8",
     "@azure-tools/typespec-autorest": "0.44.0",
