--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -50,27 +50,32 @@
     "@azure-tools/cadl-ranch-expect": "~0.14.1",
     "@azure-tools/cadl-ranch-specs": "0.36.1",
     "@azure-tools/typespec-autorest": "0.45.0",
+    "@azure-tools/typespec-azure-core": ">=0.45.0 <1.0.0",
     "@azure-tools/typespec-azure-resource-manager": "0.45.0",
+    "@azure-tools/typespec-client-generator-core": "0.45.4",
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
     "@typescript-eslint/parser": "~4.1.1",
+    "@typespec/compiler": "0.59.1",
+    "@typespec/http": "0.59.1",
     "@typespec/openapi": "~0.59.0",
+    "@typespec/rest": "0.59.1",
+    "@typespec/versioning": "0.59.0",
+    "@typespec/xml": "0.59.0",
     "@types/jest": "~26.0.24",
     "eslint": "~6.6.0",
     "jest": "~27.0.6",
     "ts-jest": "~27.0.4",
     "typescript": "~5.1.3"
   },
+  "peerDependencies": {
+    "@azure-tools/typespec-client-generator-core": "0.45.4",
+    "@typespec/compiler": "0.59.1"
+  },
   "dependencies": {
     "@azure-tools/codegen": "~2.9.2",
     "@azure-tools/linq": "~3.1.0",
-    "@azure-tools/typespec-azure-core": ">=0.45.0 <1.0.0",
-    "@azure-tools/typespec-client-generator-core": "0.45.4",
-    "@typespec/compiler": "0.59.1",
-    "@typespec/http": "0.59.1",
-    "@typespec/rest": "0.59.1",
-    "@typespec/versioning": "0.59.0",
     "js-yaml": "~4.1.0",
     "source-map-support": "0.5.21"
   }
