add typespec/http as a peer dependency as the emitter references it

--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -71,7 +71,8 @@
   },
   "peerDependencies": {
     "@azure-tools/typespec-client-generator-core": "0.45.4",
-    "@typespec/compiler": "0.59.1"
+    "@typespec/compiler": "0.59.1",
+    "@typespec/http": "0.59.1"
   },
   "dependencies": {
     "@azure-tools/codegen": "~2.9.2",
