--- a/eng/pipelines/cadl-ranch-typespec.yml
+++ b/eng/pipelines/cadl-ranch-typespec.yml
@@ -20,7 +20,7 @@ steps:
   - task: AzureCLI@2
     displayName: Upload TypeSpec Spector Test Coverage
     inputs:
-      azureSubscription: "Cadl Ranch Storage"
+      azureSubscription: "TypeSpec Storage"
       scriptType: "bash"
       scriptLocation: "inlineScript"
       inlineScript: $(spector) upload-coverage --generatorName go --storageAccountName typespec --generatorVersion $(node -p -e "require('$(System.DefaultWorkingDirectory)/packages/typespec-go/package.json').version") --generatorMode azure
