--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -45,9 +45,9 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@typespec/spector": "~0.1.0-alpha.3",
-    "@typespec/http-specs": "~0.1.0-alpha.3-dev.6",
-    "@azure-tools/azure-http-specs": "~0.1.0-alpha.3-dev.6",
+    "@typespec/spector": "~0.1.0-alpha.5",
+    "@typespec/http-specs": "~0.1.0-alpha.5",
+    "@azure-tools/azure-http-specs": "~0.1.0-alpha.4",
     "@azure-tools/typespec-autorest": ">=0.49.0 <1.0.0",
     "@azure-tools/typespec-azure-core": ">=0.49.0 <1.0.0",
     "@azure-tools/typespec-azure-resource-manager": ">=0.49.0 <1.0.0",
