--- a/eng/pipelines/ci-typespec-nightly.yml
+++ b/eng/pipelines/ci-typespec-nightly.yml
@@ -29,3 +29,5 @@ jobs:
           cat packages/typespec-go/package.json
       displayName: 'Bump TypeSpec Dependencies to dev'
     - template: /eng/pipelines/templates/steps/build-test-typespec.yaml
+      parameters:
+        Nightly: true
