Go nightly build use typespec-bump-deps (#1514)
* update pipeline

--- a/eng/pipelines/ci-typespec-nightly.yml
+++ b/eng/pipelines/ci-typespec-nightly.yml
@@ -22,6 +22,12 @@ jobs:
     - template: /eng/pipelines/templates/steps/set-env.yaml
       parameters:
         GoVersion: "1.21.4"
-    - script: npm install -g @typespec/compiler@next
-      displayName: Install @typespec/compiler@next
+    - script: |
+          npm install -g @typespec/compiler@next
+          npx @azure-tools/typespec-bump-deps packages/typespec-go/package.json --add-npm-overrides
+          echo "typespec-go/package.json"
+          cat packages/typespec-go/package.json
+      displayName: 'Bump TypeSpec Dependencies to dev'
     - template: /eng/pipelines/templates/steps/build-test-typespec.yaml
+      parameters:
+        Nightly: true
