--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -48,20 +48,21 @@
     "@typespec/spector": "~0.1.0-alpha.8",
     "@typespec/http-specs": "~0.1.0-alpha.12",
     "@azure-tools/azure-http-specs": "~0.1.0-alpha.7",
-    "@azure-tools/typespec-autorest": ">=0.52.0 <1.0.0",
-    "@azure-tools/typespec-azure-core": ">=0.52.0 <1.0.0",
-    "@azure-tools/typespec-azure-resource-manager": ">=0.52.0 <1.0.0",
-    "@azure-tools/typespec-client-generator-core": ">=0.52.0 <1.0.0",
+    "@azure-tools/typespec-autorest": "0.53.0-dev.13",
+    "@azure-tools/typespec-azure-core": "0.53.0-dev.10",
+    "@azure-tools/typespec-azure-resource-manager": "0.53.0-dev.8",
+    "@azure-tools/typespec-client-generator-core": "0.53.0-dev.32",
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
     "@typescript-eslint/parser": "~4.1.1",
-    "@typespec/compiler": ">=0.66.0 <1.0.0",
-    "@typespec/http": ">=0.66.0 <1.0.0",
-    "@typespec/openapi": ">=0.66.0 <1.0.0",
-    "@typespec/rest": ">=0.66.0 <1.0.0",
-    "@typespec/versioning": ">=0.66.0 <1.0.0",
-    "@typespec/xml": ">=0.66.0 <1.0.0",
+    "@typespec/compiler": "0.67.0-dev.31",
+    "@typespec/http": "0.67.0-dev.12",
+    "@typespec/openapi": "0.67.0-dev.5",
+    "@typespec/rest": "0.67.0-dev.6",
+    "@typespec/versioning": "0.67.0-dev.5",
+    "@typespec/xml": "0.67.0-dev.3",
+    "@typespec/streams": "0.67.0-dev.3",
     "@types/jest": "~26.0.24",
     "eslint": "~6.6.0",
     "jest": "~27.0.6",
@@ -69,14 +70,32 @@
     "typescript": "~5.1.3"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": ">=0.52.0 <1.0.0",
-    "@typespec/compiler": ">=0.66.0 <1.0.0",
-    "@typespec/http": ">=0.66.0 <1.0.0"
+    "@azure-tools/typespec-client-generator-core": "0.53.0-dev.32",
+    "@typespec/compiler": "0.67.0-dev.31",
+    "@typespec/http": "0.67.0-dev.12"
   },
   "dependencies": {
     "@azure-tools/codegen": "~2.9.2",
     "@azure-tools/linq": "~3.1.0",
     "js-yaml": "~4.1.0",
     "source-map-support": "0.5.21"
+  },
+  "overrides": {
+    "@typespec/compiler": "0.67.0-dev.31",
+    "@typespec/http": "0.67.0-dev.12",
+    "@typespec/openapi": "0.67.0-dev.5",
+    "@typespec/rest": "0.67.0-dev.6",
+    "@typespec/versioning": "0.67.0-dev.5",
+    "@typespec/xml": "0.67.0-dev.3",
+    "@typespec/events": "0.67.0-dev.3",
+    "@typespec/sse": "0.67.0-dev.3",
+    "@typespec/streams": "0.67.0-dev.3",
+    "@azure-tools/typespec-client-generator-core": "0.53.0-dev.32",
+    "@azure-tools/typespec-azure-core": "0.53.0-dev.10",
+    "@azure-tools/typespec-azure-resource-manager": "0.53.0-dev.8",
+    "@azure-tools/typespec-azure-rulesets": "0.53.0-dev.6",
+    "@azure-tools/typespec-autorest": "0.53.0-dev.13",
+    "@typespec/eslint-config-typespec": "0.56.0-dev.1",
+    "@typespec/library-linter": "0.67.0-dev.3"
   }
 }
