--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -46,7 +46,7 @@
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
     "@typespec/spector": "~0.1.0-alpha.9",
-    "@typespec/http-specs": "~0.1.0-alpha.14",
+    "@typespec/http-specs": "~0.1.0-alpha.15-dev.3",
     "@azure-tools/azure-http-specs": "~0.1.0-alpha.10",
     "@azure-tools/typespec-autorest": ">=0.53.0 <1.0.0",
     "@azure-tools/typespec-azure-core": ">=0.53.0 <1.0.0",
