--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -46,12 +46,12 @@
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
     "@typespec/spector": "~0.1.0-alpha.9",
-    "@typespec/http-specs": "~0.1.0-alpha.15-dev.3",
+    "@typespec/http-specs": "~0.1.0-alpha.15",
     "@azure-tools/azure-http-specs": "~0.1.0-alpha.10",
     "@azure-tools/typespec-autorest": ">=0.53.0 <1.0.0",
     "@azure-tools/typespec-azure-core": ">=0.53.0 <1.0.0",
     "@azure-tools/typespec-azure-resource-manager": ">=0.53.0 <1.0.0",
-    "@azure-tools/typespec-client-generator-core": ">=0.53.0 <1.0.0",
+    "@azure-tools/typespec-client-generator-core": ">=0.53.1 <1.0.0",
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
