Update CI to the latest version of Go

--- a/eng/pipelines/ci-go.yml
+++ b/eng/pipelines/ci-go.yml
@@ -30,7 +30,7 @@ extends:
       - stage: "AutoRest_Go_CI"
         jobs:
           - job: "AutoRest_Go_CI"
-            displayName: "Run AutoRest CI Checks - go1.21"
+            displayName: "Run AutoRest CI Checks"
 
             variables:
               - template: /eng/pipelines/templates/variables/image.yml
@@ -42,7 +42,4 @@ extends:
 
             steps:
               - template: /eng/pipelines/templates/steps/set-env.yaml
-                parameters:
-                  GoVersion: "1.21.4"
-
               - template: /eng/pipelines/templates/steps/build-test-go.yaml
