--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -48,38 +48,56 @@
     "@typespec/spector": "~0.1.0-alpha.9",
     "@typespec/http-specs": "~0.1.0-alpha.15",
     "@azure-tools/azure-http-specs": "~0.1.0-alpha.10",
-    "@azure-tools/typespec-autorest": ">=0.53.0 <1.0.0",
-    "@azure-tools/typespec-azure-core": ">=0.53.0 <1.0.0",
-    "@azure-tools/typespec-azure-resource-manager": ">=0.53.0 <1.0.0",
-    "@azure-tools/typespec-client-generator-core": ">=0.53.1 <1.0.0",
+    "@azure-tools/typespec-autorest": "0.54.0-dev.2",
+    "@azure-tools/typespec-azure-core": "0.54.0-dev.4",
+    "@azure-tools/typespec-azure-resource-manager": "0.54.0-dev.2",
+    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.9",
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
     "@typescript-eslint/parser": "~4.1.1",
-    "@typespec/compiler": ">=0.67.1 <1.0.0",
-    "@typespec/http": ">=0.67.1 <1.0.0",
-    "@typespec/openapi": ">=0.67.1 <1.0.0",
-    "@typespec/rest": ">=0.67.1 <1.0.0",
-    "@typespec/versioning": ">=0.67.1 <1.0.0",
-    "@typespec/xml": ">=0.67.1 <1.0.0",
+    "@typespec/compiler": "0.68.0-dev.5",
+    "@typespec/http": "0.68.0-dev.3",
+    "@typespec/openapi": "0.68.0-dev.2",
+    "@typespec/rest": "0.68.0-dev.3",
+    "@typespec/versioning": "0.68.0-dev.2",
+    "@typespec/xml": "0.68.0-dev.2",
     "@types/jest": "~26.0.24",
     "eslint": "~6.6.0",
     "jest": "~27.0.6",
     "ts-jest": "~27.0.4",
     "typescript": "~5.1.3",
-    "@typespec/streams": ">=0.67.1 <1.0.0",
-    "@typespec/events": ">=0.67.1 <1.0.0",
-    "@typespec/sse": ">=0.67.1 <1.0.0"
+    "@typespec/streams": "0.68.0-dev.2",
+    "@typespec/events": "0.68.0-dev.2",
+    "@typespec/sse": "0.68.0-dev.2"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": ">=0.53.1 <1.0.0",
-    "@typespec/compiler": ">=0.67.1 <1.0.0",
-    "@typespec/http": ">=0.67.1 <1.0.0"
+    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.9",
+    "@typespec/compiler": "0.68.0-dev.5",
+    "@typespec/http": "0.68.0-dev.3"
   },
   "dependencies": {
     "@azure-tools/codegen": "~2.9.2",
     "@azure-tools/linq": "~3.1.0",
     "js-yaml": "~4.1.0",
     "source-map-support": "0.5.21"
+  },
+  "overrides": {
+    "@typespec/compiler": "0.68.0-dev.5",
+    "@typespec/http": "0.68.0-dev.3",
+    "@typespec/openapi": "0.68.0-dev.2",
+    "@typespec/rest": "0.68.0-dev.3",
+    "@typespec/versioning": "0.68.0-dev.2",
+    "@typespec/xml": "0.68.0-dev.2",
+    "@typespec/events": "0.68.0-dev.2",
+    "@typespec/sse": "0.68.0-dev.2",
+    "@typespec/streams": "0.68.0-dev.2",
+    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.9",
+    "@azure-tools/typespec-azure-core": "0.54.0-dev.4",
+    "@azure-tools/typespec-azure-resource-manager": "0.54.0-dev.2",
+    "@azure-tools/typespec-azure-rulesets": "0.54.0-dev.2",
+    "@azure-tools/typespec-autorest": "0.54.0-dev.2",
+    "@typespec/eslint-config-typespec": "0.56.0-dev.1",
+    "@typespec/library-linter": "0.68.0-dev.2"
   }
 }
