--- a/eng/pipelines/ci-gotest.yml
+++ b/eng/pipelines/ci-gotest.yml
@@ -36,7 +36,7 @@ extends:
       - stage: "AutoRest_Go_CI"
         jobs:
           - job: "AutoRest_Go_CI"
-            displayName: "Run AutoRest CI Checks - $(GoVersion)"
+            displayName: "Run AutoRest CI Checks - "
 
             variables:
               - template: /eng/pipelines/templates/variables/globals.yml
