--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -45,9 +45,9 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@typespec/spector": "~0.1.0-alpha.9",
-    "@typespec/http-specs": "~0.1.0-alpha.15",
-    "@azure-tools/azure-http-specs": "~0.1.0-alpha.10",
+    "@typespec/spector": "0.1.0-alpha.11-dev.0",
+    "@typespec/http-specs": "0.1.0-alpha.17-dev.1",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.13-dev.1",
     "@azure-tools/typespec-autorest": "0.54.0-dev.5",
     "@azure-tools/typespec-azure-core": "0.54.0-dev.5",
     "@azure-tools/typespec-azure-resource-manager": "0.54.0-dev.3",
